--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "compression": "^1.7.4",
     "graphql": "^16.6.0",
     "helmet": "^6.1.5",
+    "nestjs-twilio": "^4.1.1",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
