--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ POSTGRES_PWD=postgres
 POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
 DB_NAME=swishlist-dev
+
+TWILIO_AUTH_TOKEN=""
+TWILIO_ACCOUNT_SID=""
+
+TWILIO_VERIFY_SERVICE_SID=""
+TWILIO_MESSAGING_SERVICE_SID=""
