--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^11.0.5",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.4.0",
     "@nestjs/schedule": "^2.2.1",
@@ -43,6 +45,8 @@
     "graphql": "^16.6.0",
     "helmet": "^6.1.5",
     "nestjs-twilio": "^4.1.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
