--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "graphql": "^16.6.0",
     "helmet": "^6.1.5",
     "nestjs-twilio": "^4.1.1",
+    "node-html-parser": "^6.1.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.0",
